# akari

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Procfile  README.md  ab_testing.py  actions.py  akari_cli.py  browser.py  calendar_access.py  conversation.py  dispatch_registry.py  evolution.py  learning.py  main.py  monitor.py  notes_access.py  planner.py  pyproject.toml  requirements.txt  server.py  suggestions.py  tracking.py  work_mode.py
.github/workflows/: publish.yml
akari_cli/: __init__.py  __main__.py  akari_cli.py  calendar_access.py  config.py  mail_access.py  memory.py  notes_access.py  qa.py  screen.py  server.py  templates.py
akari_cli/templates/prompts/: feature_add.yaml  landing_page.yaml  refactor.yaml
desktop-overlay/: AkariOverlay.swift
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  orb.backup.ts  orb.ts  settings.ts  style.css  voice.ts  ws.ts
templates/prompts/: api_integration.yaml  bug_fix.yaml  research_report.yaml
tests/: test_browser_integration.py  test_classifier.py  test_e2e_pipeline.py  test_feedback_loop.py
tools/: search.py  system.py  time.py
